[package]
name = "enki_solver"
version = "0.1.0"
edition = "2021"

[dependencies]
pubgrub_alpine = { path = "../pubgrub_alpine" }
pubgrub_debian = { path = "../pubgrub_debian" }
pubgrub_opam = { path = "../pubgrub_opam" }
clap = { version = "4", features = ["derive"] }
pubgrub_cargo = { path = "../pubgrub_cargo" }
pubgrub = { git = "https://github.com/pubgrub-rs/pubgrub", branch = "dev", features = ["serde"] }
semver = { version = "1.0.24", features = ["serde"] }
semver-pubgrub = { git = "https://github.com/pubgrub-rs/semver-pubgrub", features = ["serde"] }
crates-index = { version = "3.4", features = ["git", "git-https", "parallel"] }
cargo = { git = "https://github.com/rust-lang/cargo", branch = "master" }
