[package]
name = "pubgrub_opam"
version = "0.1.0"
edition = "2021"

[dependencies]
pubgrub = { git = "https://github.com/pubgrub-rs/pubgrub", branch = "dev", features = ["serde"] }
rustc-hash = "=1.1.0"
itertools = "0.10.1"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
walkdir = "2.3"
pubgrub_debian = { path = "../pubgrub_debian" }
